# Python_For_AI

./: pyproject.toml
4-kyu/snail/: README.md  snail.py
5-kyu/optimized-pathfinding-algorithm/: README.md  optimized-pathfinding-algorithm.py
5-kyu/physics-mechanics-atwood-machines-in-series/: README.md  physics-mechanics-atwood-machines-in-series.py
5-kyu/simple-pig-latin/: simple-pig-latin.py
5-kyu/tic-tac-toe-checker/: tic-tac-toe-checker.py
6-kyu/counting-duplicates/: counting-duplicates.py
6-kyu/give-me-a-diamond/: give-me-a-diamond.py
6-kyu/urban-dictionary/: README.md  urban-dictionary.py
6-kyu/your-order-please/: your-order-please.py
7-kyu/flatten-1/: README.md  flatten-1.py
Python_for_AI/Git/: main.py  pyproject.toml
Python_for_AI/Hack/: pyproject.toml
Python_for_AI/Machine_Learning/Full_ML_Churn_Project/: dockerfile  main.py  pyproject.toml
Python_for_AI/Machine_Learning/Full_ML_Churn_Project/.github/workflows/: ci.yml
Python_for_AI/Machine_Learning/Full_ML_Churn_Project/.gradio/flagged/: dataset1.csv
Python_for_AI/Machine_Learning/Full_ML_Churn_Project/src/app/: main.py
Python_for_AI/Machine_Learning/Full_ML_Churn_Project/src/data/: load_data.py  preprocess.py
Python_for_AI/Machine_Learning/Full_ML_Churn_Project/src/features/: build_features.py
Python_for_AI/Machine_Learning/Full_ML_Churn_Project/src/models/: evaluate.py  train.py  tune.py
Python_for_AI/Machine_Learning/Full_ML_Churn_Project/src/utils/: validate_data.py
Python_for_AI/Matplotlib/: main.py
Python_for_AI/Model_Context_Protocol/MCP_Learning/: pyproject.toml
Python_for_AI/Model_Context_Protocol/MCP_Learning/basics/: client_sse.py  client_stdio.py  server.py
Python_for_AI/Model_Context_Protocol/MCP_Learning/openai_integration/: client.py  server.py
Python_for_AI/Model_Context_Protocol/MCP_Learning/running_with_docker/: client.py  main.py  server.py
Python_for_AI/Vector_Databases/PostgreSQL_Vector/: main.py  pyproject.toml  vector.py
Weather_Analyzer/: .gitignore  README.md  weather.py
(+81 files in other folders)
