[project]
name = "full-ml-churn-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "gradio>=6.14.0",
    "great-expectations>=1.17.0",
    "lightgbm>=4.6.0",
    "mlflow>=1.27.0",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.46.0",
    "xgboost>=3.2.0",
]
