[project]
name = "postgresql-vector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "numpy>=2.4.6",
    "psycopg2>=2.9.12",
    "python-dotenv>=1.2.2",
]
